# AI-Legal-Analyzer

./: .gitignore  docker-compose.yml
Backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
Backend/app/: main.py
Backend/app/api/: auth_routes.py  chat_routes.py  deps.py  document_routes.py  query_routes.py
Backend/app/core/: config.py  logging.py  security.py
Backend/app/db/: database.py  repositories.py
Backend/app/models/: auth.py  clause.py  query.py
Backend/app/services/: classifier.py  embedding.py  pdf_extractor.py  qa_chain.py  risk_scorer.py  segmenter.py  vector_store.py
Backend/data/: legal_analyzer.db
Backend/data/faiss_index/: index.faiss  index.pkl
Frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
Frontend/src/: App.jsx  index.css
Frontend/src/api/: client.js
Frontend/src/components/: ChatInterface.jsx  ClauseCard.jsx  DocumentCard.jsx  FilterBar.jsx  Navbar.jsx  PdfViewer.jsx  RiskBadge.jsx  ThemeToggle.jsx  Toast.jsx  UploadModal.jsx
Frontend/src/context/: AuthContext.jsx
Frontend/src/pages/: DashboardPage.jsx  DocumentPage.jsx  GlobalChatPage.jsx  LoginPage.jsx  RegisterPage.jsx  RiskDashboard.jsx
